@@ -7,8 +7,8 @@ import java.util.List;
 public class Main {
 
   public static void main(String[] args) {
-    var fromGuava = ImmutableList.of("Hello", "World!");
-    var fromJre = List.of("Hello", "World!");
+    List<String> fromGuava = ImmutableList.of("Hello", "World!");
+    List<String> fromJre = List.of("Hello", "World!");
 
     if (!fromJre.equals(fromGuava)) {
       throw new RuntimeException("This is less than ideal");
